--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,31 @@
         android:roundIcon="@drawable/logo_barbero02"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CentroActivity"></activity>
-        <activity android:name=".RegistroActivity" />
+        <activity
+            android:name=".HerediaActivity"
+            android:label="@string/title_activity_heredia"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".RestaurarActivity"
+            android:label="@string/title_activity_restaurar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_staAna"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".RegistroActivity"
+            android:label="@string/title_activity_registro"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+                android:name=".CentroActivity"
+                android:label="@string/title_activity_centro"
+                android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
